--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 flask = "*"
+mongoengine = "*"
+dnspython = "*"
+passlib = "*"
 
 [requires]
 python_version = "3.7"
